# aoe_cmake_kit_tutorial

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-ubuntu-multi-compiler.yml
00-import_the_kit/: CMakeLists.txt
01-project/: CMakeLists.txt
02-almost_full_example/: CMakeLists.txt
02-almost_full_example/modules/mod1/: CMakeLists.txt
02-almost_full_example/modules/mod1/exe1/: CMakeLists.txt
02-almost_full_example/modules/mod1/exe1/include/demo/: do_more_things.h
02-almost_full_example/modules/mod1/exe1/src/exe1/: main.cpp
02-almost_full_example/modules/mod1/exe1/src/exe1-another/: main.cpp
02-almost_full_example/modules/mod1/exe1/src/lib3/: do_more_things.cpp
02-almost_full_example/modules/mod1/lib1/: CMakeLists.txt
02-almost_full_example/modules/mod1/lib1/include/demo/: lib1.h
02-almost_full_example/modules/mod1/lib1/my_include/demo/: do_something.h
02-almost_full_example/modules/mod1/lib1/proto/proto1/demo/: msg1.proto
02-almost_full_example/modules/mod1/lib1/src/lib1/: lib1.cpp
02-almost_full_example/modules/mod1/lib1/test/lib1/: main.cpp
02-almost_full_example/modules/mod1/lib1/test/lib1-case1/: main.cpp
02-almost_full_example/modules/mod1/lib2/: CMakeLists.txt
02-almost_full_example/modules/mod1/lib2/example/: lib2-case1.cpp  lib2.cpp
02-almost_full_example/modules/mod1/lib2/include/demo/: lib2.h
02-almost_full_example/modules/mod1/lib2/proto/proto2/demo/: msg2.proto
02-almost_full_example/modules/mod1/lib2/src/lib2/: lib2.cpp
02-almost_full_example/modules/mod1/lib2/test/: lib2-case1.cpp  lib2.cpp
02-almost_full_example/modules/mod1/lib2/test/lib2/: main.cpp
02-almost_full_example/modules/mod2/: CMakeLists.txt
02-almost_full_example/modules/mod2/include/demo/: lib4.h
02-almost_full_example/modules/mod2/src/exe2/: main.cpp
02-almost_full_example/modules/mod2/src/lib4/: lib4.cpp
03-version_target/: CMakeLists.txt  main.cpp
